--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
   <body>
     <div class="wrapper">
       <div class="score">
-        <h4>Puntuación</h4>
-        <h4 id="h4"></h4>
+        <div class="divs">
+          <div class="div1">
+            <h4>Puntuación</h4>
+            <h4 id="h4"></h4>
+          </div>
+          <div class="div2">
+            <a href="http://josemanuelcastellano.com">inicio</a>
+          </div>
+        </div>
         <div class="grid"></div>
       </div>
     </div>
