--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h4 id="h4"></h4>
           </div>
           <div class="div2">
-            <a href="http://josemanuelcastellano.com">inicio</a>
+            <a href="http://josemanuelcastellano.com">volver</a>
           </div>
         </div>
         <div class="grid"></div>
