--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
         <div class="grid"></div>
       </div>
     </div>
-
+    <h5>
+      Este juego necesita las teclas<br />
+      para el desplazamiento. No se<br />
+      puede jugar a este juego desde<br />
+      un telefono movil.
+    </h5>
     <script src="scripts/index.js"></script>
   </body>
 </html>
